TDD added restrictions for delivery Max (droneCount = 20, blocksToDeliver= 10, ordersByDrone = 3)

--- a/Delivery.Test/Delivery.Test.csproj
+++ b/Delivery.Test/Delivery.Test.csproj
@@ -39,5 +39,11 @@
     <None Update="Infraestructure\Services\Resources\expected-out01.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Infraestructure\Services\Resources\in01 %28copia%29.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Infraestructure\Services\Resources\expected-out01 %28copia%29.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
