Added test scenarios for parallel test

--- a/Delivery.Test/Delivery.Test.csproj
+++ b/Delivery.Test/Delivery.Test.csproj
@@ -42,5 +42,23 @@
     <None Update="Infraestructure\Services\Resources\expected-out02.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Infraestructure\Services\Resources\in03.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Infraestructure\Services\Resources\expected-out03.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Infraestructure\Services\Resources\expected-out04.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Infraestructure\Services\Resources\in04.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Infraestructure\Services\Resources\in05.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Infraestructure\Services\Resources\expected-out05.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
